--- a/Front/src/app/dashboard/datosconstruccion/datosconstruccion.component.html
+++ b/Front/src/app/dashboard/datosconstruccion/datosconstruccion.component.html
@@ -2,7 +2,7 @@
   <div class="our-team">
  <div class="picture">
 
-   <img [src]="'http://localhost:3000/'+usuarioTest.avatarPath || '../../../../../assets/img/mike.jpg'" class="img-fluid">
+   <img [src]="'http://lendiup.com/'+usuarioTest.avatarPath || '../../../../../assets/img/mike.jpg'" class="img-fluid">
 
  </div>
  <div class="team-content">
