--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.html
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.html
@@ -136,7 +136,7 @@
       </mat-card>
     </div>
     <div class="col-md-4">
-    <app-datosconstruccion></app-datosconstruccion>
+    <app-datosconstruccion #datosDesdeElPadre></app-datosconstruccion>
   </div>
 </div>
 
