--- a/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
+++ b/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
@@ -1,4 +1,4 @@
-<div class="panel-header">
+<!-- <div class="panel-header">
   <div class="header text-center">
     <h2 class="title">MI ESTADO DE CUENTA</h2>
   </div>
@@ -23,4 +23,10 @@
 <div class="col-md-4">
   <app-datosconstruccion></app-datosconstruccion>
 </div>
+</div> --> <div class="ui label">
+
+  <i class="list icon"></i> Counter: {{ counter }}
+
 </div>
+
+<button class="ui primary button" (click)="inc() ">Increment
