--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -19,7 +19,7 @@
           <form autocomplete="off" [formGroup]="miFormulario"
             (ngSubmit)="guardar()">
 
-            <!-- Primera Fila -->
+            <!-- Primera 1 Fila -->
             <div class="row">
 
               <!-- Tipo de Documento -->
@@ -40,6 +40,30 @@
                 <mat-error *ngIf="campoEsValido('numdoc')">
                   {{getError('numdoc')}}
                 </mat-error>
+              </mat-form-field>
+            </div>
+
+             <!-- Primera 2 Fila -->
+            <div class="row">
+
+              <!-- Fecha Nacimiento -->
+              <mat-form-field class="form-group col-md-6 pl-1">
+                  <mat-label>Fecha De Nacimiento</mat-label>
+                  <input matInput formControlName="fechaNac" type="date"
+                  class="form-control" >
+                <mat-error *ngIf="campoEsValido('fechaNac')">
+                  {{getError('fechaNac')}}
+                </mat-error>
+              </mat-form-field>
+
+              <!-- Fehcas Expedicion Cedula -->
+              <mat-form-field class="form-group col-md-6 pl-1">
+                <mat-label>Fecha De Expedicion De La Cedula</mat-label>
+                <input matInput formControlName="fechaExp" type="date"
+                class="form-control" >
+              <mat-error *ngIf="campoEsValido('fechaExp')">
+                {{getError('fechaExp')}}
+              </mat-error>
               </mat-form-field>
             </div>
 
