--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.scss
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.scss
@@ -32,6 +32,23 @@
     text-shadow: 0px 1px 0px #2f6627;
     margin: 0px 5px 0px 0px;
 }
+.mat-mini-fab{
+  margin: 10px;
+  color: rgb(21, 84, 154);
+  background-color: white;
+}
+
+.custom-file-upload{
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.inputx{
+  margin-top: 70px;
+}
 
 .button3:hover {
     background-color: rgb(30, 135, 221);
